jobs/OpenCOG_U1604_CogUtil.log
Started by user [8mha:////4L2jTPWu9zIb56dnp8RqVObesKKV2DVGI0jJXlam1DqAAAAAlx+LCAAAAAAAAP9b85aBtbiIQTGjNKU4P08vOT+vOD8nVc83PyU1x6OyILUoJzMv2y+/JJUBAhiZGBgqihhk0NSjKDWzXb3RdlLBUSYGJk8GtpzUvPSSDB8G5tKinBIGIZ+sxLJE/ZzEvHT94JKizLx0a6BxUmjGOUNodHsLgAzWEgZu/dLi1CL9xJTczDwAj6GcLcAAAAA=[0madmin
Building in workspace /var/lib/jenkins/workspace/OpenCOG_U1604_CogUtil
[OpenCOG_U1604_CogUtil] $ /bin/sh -xe /tmp/jenkins7898491522888641247.sh
+ COGDIR=../OpenCOG_U1604
+ . ../OpenCOG_U1604/build.docker/docker.env
+ CID=74ec4bf61c36894753ac4286dfe2a05d43bebf9320703f5ad302fe673c60b93f
+ DKRUNROOT=docker exec --user root   74ec4bf61c36894753ac4286dfe2a05d43bebf9320703f5ad302fe673c60b93f
+ DKRUNUSER=docker exec --user jenkins  74ec4bf61c36894753ac4286dfe2a05d43bebf9320703f5ad302fe673c60b93f
+ UID=125
+ GID=132
+ LOGFILE=/var/lib/jenkins/jobs/OpenCOG_U1604_CogUtil/builds/321/log
+ cat


**********************************************************
**********************************************************
**********************************************************
**********************************************************
*****                                                *****
*****                  Cogutil TEST                *****
*****                                                *****
**********************************************************
**********************************************************
**********************************************************
**********************************************************


+ echo GIT_COMMIT=
GIT_COMMIT=
+ echo GIT_BRANCH=
GIT_BRANCH=
+ echo GIT_URL=
GIT_URL=
+ WDIR=cogutil
+ JOBDIR=../OpenCOG_U1604/dependencies
+ cat
+ chmod +x ../OpenCOG_U1604/dependencies/job1
+ docker exec --user jenkins 74ec4bf61c36894753ac4286dfe2a05d43bebf9320703f5ad302fe673c60b93f bash dependencies/job1
/home/opencog
+ pwd
+ cd cogutil
+ cd build
+ make -j8 test
[  5%] Building CXX object opencog/util/CMakeFiles/cogutil.dir/mt19937ar.cc.o
In file included from /home/opencog/cogutil/opencog/util/mt19937ar.cc:26:0:
/home/opencog/cogutil/opencog/util/numeric.h: In function 'bool opencog::is_approx_eq_ulp(double, double, long long int)':
/home/opencog/cogutil/opencog/util/numeric.h:286:2: error: expected ';' before '}' token
  }
  ^
/home/opencog/cogutil/opencog/util/numeric.h:287:44: warning: dereferencing type-punned pointer will break strict-aliasing rules [-Wstrict-aliasing]
  long long int ulps = llabs(*(int64_t*) &(x) - *(int64_t*)&(y));
                                            ^
/home/opencog/cogutil/opencog/util/numeric.h:287:62: warning: dereferencing type-punned pointer will break strict-aliasing rules [-Wstrict-aliasing]
  long long int ulps = llabs(*(int64_t*) &(x) - *(int64_t*)&(y));
                                                              ^
make[3]: *** [opencog/util/CMakeFiles/cogutil.dir/mt19937ar.cc.o] Error 1
make[2]: *** [opencog/util/CMakeFiles/cogutil.dir/all] Error 2
opencog/util/CMakeFiles/cogutil.dir/build.make:350: recipe for target 'opencog/util/CMakeFiles/cogutil.dir/mt19937ar.cc.o' failed
CMakeFiles/Makefile2:231: recipe for target 'opencog/util/CMakeFiles/cogutil.dir/all' failed
CMakeFiles/Makefile2:106: recipe for target 'CMakeFiles/test.dir/rule' failed
make[1]: *** [CMakeFiles/test.dir/rule] Error 2
make: *** [test] Error 2
Makefile:197: recipe for target 'test' failed
+ DSTATUS=TESTFAIL
+ /var/lib/jenkins/status/updateStatus TESTFAIL /var/lib/jenkins/jobs/OpenCOG_U1604_CogUtil/builds/321/log OpenCOG_U1604_CogUtil
Auto packing the repository in background for optimum performance.
See "git help gc" for manual housekeeping.
error: The last gc run reported the following. Please correct the root cause
and remove .git/gc.log.
Automatic cleanup will not be performed until the file is removed.

error: pack-objects died of signal 15
error: failed to run repack

Already up-to-date.
